--- a/14-Natural-Language-Processing/01_Text_Data_Assignment.ipynb
+++ b/14-Natural-Language-Processing/01_Text_Data_Assignment.ipynb
@@ -1,10 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "from collections import Counter\n",
+    "\n",
+    "from bs4 import BeautifulSoup\n",
+    "import pandas as pd\n",
+    "import requests"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Natural Language Processing (NLP)\n",
+    "# Text Data Assignment\n",
     "\n",
     "# 1. String Basics\n",
     "\n",
@@ -17,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -30,7 +44,7 @@
        "{'.': 1, 'c': 1, 'e': 1, 'g': 2, 'l': 1, 'm': 1, 'o': 3}"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +87,7 @@
        "'g$$gle'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +126,7 @@
        "'The dar fox leap through the air graceful, his ey fixat on the capitula of his prey.'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -150,7 +164,8 @@
    },
    "outputs": [],
    "source": [
-    "stopwords = ['i','me','my','myself','we''our','ours','ourselves',\n",
+    "stopwords = [\n",
+    "    'i','me','my','myself','we''our','ours','ourselves',\n",
     "    'you','your','yours','yourself','yourselves','he','him','his','himself',\n",
     "    'she','her','hers','herself','it','its','itself','they','them','their',\n",
     "    'theirs','themselves','what','which','who','whom','this','that','these',\n",
@@ -162,19 +177,41 @@
     "    'under','again','further','then','once','here','there','when','where',\n",
     "    'why','how','all','any','both','each','few','more','most','other','some',\n",
     "    'such','no','nor','not','only','own','same','so','than','too','very',\n",
-    "    's','t','can','will','just','don','should','now']"
+    "    's','t','can','will','just','don','should','now'\n",
+    "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['daring',\n",
+       " 'fox',\n",
+       " 'leaped',\n",
+       " 'air',\n",
+       " 'gracefully',\n",
+       " 'eyes',\n",
+       " 'fixated',\n",
+       " 'capitulation',\n",
+       " 'prey']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def bad_stopwords_cleaner(document, stopwords):\n",
-    "    for suffix in suffixes:\n",
-    "        document = document.replace(stopwords, '')\n",
-    "    return document"
+    "def stopwords_cleaner(document, stopwords):\n",
+    "    words = re.findall('[a-zA-Z]+', document.lower())\n",
+    "    words = [word for word in words if word not in stopwords]\n",
+    "    return words\n",
+    "\n",
+    "stopwords_cleaner(document, stopwords)"
    ]
   },
   {
@@ -197,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -214,10 +251,209 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def vectorize_words(document, stopwords):\n",
+    "    words = stopwords_cleaner(document, stopwords)\n",
+    "    word_counts = Counter(words)\n",
+    "    \n",
+    "    return word_counts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>abides</th>\n",
+       "      <th>ability</th>\n",
+       "      <th>able</th>\n",
+       "      <th>academia</th>\n",
+       "      <th>academic</th>\n",
+       "      <th>accept</th>\n",
+       "      <th>acceptable</th>\n",
+       "      <th>access</th>\n",
+       "      <th>accesses</th>\n",
+       "      <th>accommodations</th>\n",
+       "      <th>...</th>\n",
+       "      <th>without</th>\n",
+       "      <th>work</th>\n",
+       "      <th>working</th>\n",
+       "      <th>workplace</th>\n",
+       "      <th>works</th>\n",
+       "      <th>world</th>\n",
+       "      <th>write</th>\n",
+       "      <th>year</th>\n",
+       "      <th>years</th>\n",
+       "      <th>yet</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>listing_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>15</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3 rows × 853 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            abides  ability  able  academia  academic  accept  acceptable  \\\n",
+       "listing_id                                                                  \n",
+       "0                0        1     0         0         2       0           0   \n",
+       "1                1        1     0         1         0       1           4   \n",
+       "2                0        1     1         0         0       0           0   \n",
+       "\n",
+       "            access  accesses  accommodations  ...  without  work  working  \\\n",
+       "listing_id                                    ...                           \n",
+       "0                0         0               0  ...        0     2        0   \n",
+       "1                1         0               1  ...        0     7        0   \n",
+       "2                1         1               0  ...        1     3        2   \n",
+       "\n",
+       "            workplace  works  world  write  year  years  yet  \n",
+       "listing_id                                                    \n",
+       "0                   0      0      0      0     2      2    1  \n",
+       "1                   0      1      3      0     3     15    1  \n",
+       "2                   2      1      4      1     0      1    0  \n",
+       "\n",
+       "[3 rows x 853 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfs = []\n",
+    "for i, listing in enumerate(job_listings):\n",
+    "    df = pd.DataFrame([vectorize_words(listing, stopwords)])\n",
+    "    df['listing_id'] = i\n",
+    "    df = df.set_index('listing_id')\n",
+    "    dfs.append(df)\n",
+    "\n",
+    "df = pd.concat(dfs, sort=True)\n",
+    "df = df.fillna(0)\n",
+    "df = df.apply(lambda x: x.astype(int))\n",
+    "\n",
+    "df.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -230,29 +466,6 @@
     "\n",
     "Load the contents of the following text file into your notebook: https://raw.githubusercontent.com/CoreyMSchafer/code_snippets/master/Python-Regular-Expressions/data.txt\n",
     "\n",
-    "If you're using Google Colab then you will have to download the raw file from github and either upload to your google drive or upload it to the notebook like we have done with CSVs in the past."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import requests\n",
-    "r = requests.get('https://raw.githubusercontent.com/'\n",
-    "                 'CoreyMSchafer/code_snippets/master/'\n",
-    "                 'Python-Regular-Expressions/data.txt')\n",
-    "contents = r.text"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "Oxxpx8l0k-wP"
-   },
-   "source": [
     "## Turn the \"unstructured\" .txt file into a \"structured\" dataframe\n",
     "Once you have read in the file's contents your task is to get this unstructured text data into a dataframe with the following headers:\n",
     "\n",
@@ -268,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +522,7 @@
        "      <td>Martin</td>\n",
        "      <td>davemartin@bogusemail.com</td>\n",
        "      <td>615-555-7164</td>\n",
-       "      <td>173 Main St.,</td>\n",
+       "      <td>173 Main St.</td>\n",
        "      <td>Springfield</td>\n",
        "      <td>RI</td>\n",
        "      <td>55924</td>\n",
@@ -320,7 +533,7 @@
        "      <td>Harris</td>\n",
        "      <td>charlesharris@bogusemail.com</td>\n",
        "      <td>800-555-5669</td>\n",
-       "      <td>969 High St.,</td>\n",
+       "      <td>969 High St.</td>\n",
        "      <td>Atlantis</td>\n",
        "      <td>VA</td>\n",
        "      <td>34075</td>\n",
@@ -331,7 +544,7 @@
        "      <td>Williams</td>\n",
        "      <td>laurawilliams@bogusemail.com</td>\n",
        "      <td>560-555-5153</td>\n",
-       "      <td>806 1st St.,</td>\n",
+       "      <td>806 1st St.</td>\n",
        "      <td>Faketown</td>\n",
        "      <td>AK</td>\n",
        "      <td>86847</td>\n",
@@ -342,7 +555,7 @@
        "      <td>Jefferson</td>\n",
        "      <td>coreyjefferson@bogusemail.com</td>\n",
        "      <td>900-555-9340</td>\n",
-       "      <td>826 Elm St.,</td>\n",
+       "      <td>826 Elm St.</td>\n",
        "      <td>Epicburg</td>\n",
        "      <td>NE</td>\n",
        "      <td>10671</td>\n",
@@ -353,7 +566,7 @@
        "      <td>Martin-White</td>\n",
        "      <td>jenniferwhite@bogusemail.com</td>\n",
        "      <td>714-555-7405</td>\n",
-       "      <td>212 Cedar St.,</td>\n",
+       "      <td>212 Cedar St.</td>\n",
        "      <td>Sunnydale</td>\n",
        "      <td>CT</td>\n",
        "      <td>74983</td>\n",
@@ -370,21 +583,24 @@
        "3      Corey     Jefferson  coreyjefferson@bogusemail.com  900-555-9340   \n",
        "4   Jennifer  Martin-White   jenniferwhite@bogusemail.com  714-555-7405   \n",
        "\n",
-       "   Street Address          City State Zipcode  \n",
-       "0   173 Main St.,  Springfield     RI   55924  \n",
-       "1   969 High St.,     Atlantis     VA   34075  \n",
-       "2    806 1st St.,     Faketown     AK   86847  \n",
-       "3    826 Elm St.,     Epicburg     NE   10671  \n",
-       "4  212 Cedar St.,    Sunnydale     CT   74983  "
+       "  Street Address         City State Zipcode  \n",
+       "0   173 Main St.  Springfield    RI   55924  \n",
+       "1   969 High St.     Atlantis    VA   34075  \n",
+       "2    806 1st St.     Faketown    AK   86847  \n",
+       "3    826 Elm St.     Epicburg    NE   10671  \n",
+       "4  212 Cedar St.    Sunnydale    CT   74983  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pandas as pd\n",
+    "r = requests.get('https://raw.githubusercontent.com/'\n",
+    "                 'CoreyMSchafer/code_snippets/master/'\n",
+    "                 'Python-Regular-Expressions/data.txt')\n",
+    "contents = r.text\n",
     "\n",
     "df = pd.DataFrame(contents.split('\\n\\n'))\n",
     "df[['Name', 'Phone Number', 'Address', 'Email']] = \\\n",
@@ -393,7 +609,7 @@
     "df[['First Name', 'Last Name']] = df['Name'].str.split(' ', expand=True)\n",
     "\n",
     "df[['Street Address', 'City', 'State', 'Zipcode']] = \\\n",
-    "    df['Address'].str.extract(r'(.+,) ([a-zA-Z]+ )([A-Z]+)( [0-9]+)', expand=True)\n",
+    "    df['Address'].str.extract(r'(.+), ([a-zA-Z ]+) ([A-Z]+) ([0-9]+)', expand=True)\n",
     "\n",
     "df = df[['First Name', 'Last Name', 'Email', 'Phone Number',\n",
     "         'Street Address', 'City', 'State', 'Zipcode']]\n",
@@ -425,14 +641,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "cRq2bzEfjdLY"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>School</th>\n",
+       "      <th>Salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Grant Cornwell</td>\n",
+       "      <td>College of Wooster</td>\n",
+       "      <td>911,651</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Marvin Krislov</td>\n",
+       "      <td>Oberlin College</td>\n",
+       "      <td>829,913</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Mark Roosevelt</td>\n",
+       "      <td>Antioch College</td>\n",
+       "      <td>507,672</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Laurie Joyner</td>\n",
+       "      <td>Wittenberg University</td>\n",
+       "      <td>463,504</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Richard Giese</td>\n",
+       "      <td>University of Mount Union</td>\n",
+       "      <td>453,800</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Name                      School   Salary\n",
+       "0  Grant Cornwell         College of Wooster   911,651\n",
+       "1  Marvin Krislov            Oberlin College   829,913\n",
+       "2  Mark Roosevelt             Antioch College  507,672\n",
+       "3   Laurie Joyner      Wittenberg University   463,504\n",
+       "4   Richard Giese  University of Mount Union   453,800"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url = ('https://www.cleveland.com/metro/2017/12/'\n",
+    "       'case_western_reserve_university_president'\n",
+    "       '_barbara_snyders_base_salary_and_bonus_'\n",
+    "       'pay_tops_among_private_colleges_in_ohio.html')\n",
+    "\n",
+    "r = requests.get(url)\n",
+    "\n",
+    "soup = BeautifulSoup(r.text, 'html.parser')\n",
+    "# print(soup.prettify())\n",
+    "\n",
+    "items = soup.find_all(class_=\"article__unordered-list-item\")\n",
+    "df = pd.DataFrame([item.text for item in items])\n",
+    "\n",
+    "df[['Name', 'School', 'Salary']] = \\\n",
+    "    df[0].str.extract(r'([a-zA-Z ]+), *([a-zA-Z ]+).+\\$([0-9,]+)', expand=True)\n",
+    "\n",
+    "df = df.drop(columns=[0])\n",
+    "\n",
+    "df.head()"
+   ]
   },
   {
    "cell_type": "markdown",
