--- a/14-Natural-Language-Processing/01_Text_Data_Lecture.ipynb
+++ b/14-Natural-Language-Processing/01_Text_Data_Lecture.ipynb
@@ -4,8 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Natural Language Processing (NLP) \n",
+    "# Text Data Lecture\n",
     "\n",
+    "## Natural Language Processing (NLP)\n",
     "\"Natural\" meaning - not computer languages but spoken/written human languages. The hard thing about NLP is that human languages are far less structured or consistent than computer languages. This is perhaps the largest source of difficulty when trying to get computers to \"understand\" human languages. How do you get a machine to understand sarcasm, and irony, and synonyms, connotation, denotation, nuance, and tone of voice --all without it having lived a lifetime of experience for context? If you think about it, our human brains have been exposed to quite a lot of training data to help us interpret languages, and even then we misunderstand each other pretty frequently. \n",
     "\n",
     "## Learning Objectives\n",
@@ -1301,11 +1302,11 @@
     "\n",
     "The only downside with regular expressions is that the syntax is pretty abstract, but with a little bit of practice  **and a lot of references to cheat sheets** we can make it happen.\n",
     "\n",
-    "### Here are some cheat sheets for your reference: \n",
+    "**Resources**\n",
     "\n",
-    "<https://www.debuggex.com/cheatsheet/regex/python>\n",
-    "\n",
-    "<https://www.dataquest.io/blog/regex-cheatsheet>"
+    "* https://docs.python.org/3.7/library/re.html\n",
+    "* https://www.debuggex.com/cheatsheet/regex/python\n",
+    "* https://www.dataquest.io/blog/regex-cheatsheet*"
    ]
   },
   {
