--- a/15-Neural-Networks/02_Backprop_Lecture.ipynb
+++ b/15-Neural-Networks/02_Backprop_Lecture.ipynb
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -268,12 +268,12 @@
      "output_type": "stream",
      "text": [
       "Layer 1 weights: \n",
-      " [[-0.24937038  1.46210794 -2.06014071]\n",
-      " [-0.3224172  -0.38405435  1.13376944]]\n",
+      " [[ 1.62434536 -0.61175641 -0.52817175]\n",
+      " [-1.07296862  0.86540763 -2.3015387 ]]\n",
       "Layer 2 weights: \n",
-      " [[-1.09989127]\n",
-      " [-0.17242821]\n",
-      " [-0.87785842]]\n"
+      " [[ 1.74481176]\n",
+      " [-0.7612069 ]\n",
+      " [ 0.3190391 ]]\n"
      ]
     }
    ],
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -307,7 +307,7 @@
      "output_type": "stream",
      "text": [
       "[0.66666667 1.        ]\n",
-      "output  [0.28582826]\n"
+      "output  [0.60623806]\n"
      ]
     }
    ],
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 7,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -340,12 +340,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.28582826]\n",
-      " [0.26841949]\n",
-      " [0.32200101]]\n",
-      "[[0.63417174]\n",
-      " [0.59158051]\n",
-      " [0.56799899]]\n"
+      "[[0.60623806]\n",
+      " [0.6168044 ]\n",
+      " [0.71212205]]\n",
+      "[[0.31376194]\n",
+      " [0.2431956 ]\n",
+      " [0.17787795]]\n"
      ]
     }
    ],
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 8,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -393,30 +393,30 @@
       "Inputs\n",
       "[0.66666667 1.        ]\n",
       "Initial Weights\n",
-      "[[-0.24937038  1.46210794 -2.06014071]\n",
-      " [-0.3224172  -0.38405435  1.13376944]]\n",
+      "[[ 1.62434536 -0.61175641 -0.52817175]\n",
+      " [-1.07296862  0.86540763 -2.3015387 ]]\n",
       "Weighted Sum 1\n",
-      "[[-0.48866412  0.59068427 -0.2396577 ]\n",
-      " [-0.26224413  0.27400578 -0.05684166]\n",
-      " [-0.46431518  1.2060717  -1.30429441]]\n",
+      "[[ 0.00992829  0.45757002 -2.6536532 ]\n",
+      " [-0.05464522  0.27686321 -1.45468986]\n",
+      " [ 0.90903295 -0.03481799 -2.06253088]]\n",
       "Activations from first layer\n",
-      "[[0.38020832 0.64352213 0.44037071]\n",
-      " [0.43481213 0.56807605 0.48579341]\n",
-      " [0.38596264 0.76960314 0.21344316]]\n",
+      "[[0.50248205 0.61243756 0.0657642 ]\n",
+      " [0.48634209 0.56877703 0.18928084]\n",
+      " [0.71280223 0.49129638 0.11279232]]\n",
       "Second Layer Weights\n",
-      "[[-1.09989127]\n",
-      " [-0.17242821]\n",
-      " [-0.87785842]]\n",
+      "[[ 1.74481176]\n",
+      " [-0.7612069 ]\n",
+      " [ 0.3190391 ]]\n",
       "Weighted Sum 2\n",
-      "[[-0.91573231]\n",
-      " [-1.00265624]\n",
-      " [-0.74459111]]\n",
+      "[[0.43152625]\n",
+      " [0.47600639]\n",
+      " [0.90571269]]\n",
       "Predictions\n",
-      "[0.28582826]\n",
+      "[0.60623806]\n",
       "Correct Output\n",
       "[0.92]\n",
       "Error\n",
-      "[0.63417174]\n"
+      "[0.31376194]\n"
      ]
     }
    ],
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 9,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -562,7 +562,7 @@
     "        return s * (1 - s)\n",
     "\n",
     "    def backward(self, X, y, o):\n",
-    "        # backward propgate through the network\n",
+    "        \"\"\"backward propgate through the network\"\"\"\n",
     "        self.o_error = y - o # error in output\n",
     "        self.o_delta = self.o_error * self.sigmoidPrime(o) # applying derivative of sigmoid to error\n",
     "  \n",
@@ -572,9 +572,55 @@
     "        self.L1_weights += X.T.dot(self.z2_delta) # adjusting first set (input --> hidden) weights\n",
     "        self.L2_weights += self.activated_hidden.T.dot(self.o_delta) # adjusting second set (hidden --> output) weights\n",
     "\n",
-    "    def train (self, X, y):\n",
+    "    def train(self, X, y):\n",
     "        o = self.feed_forward(X)\n",
     "        self.backward(X, y, o)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.66666667, 1.        ],\n",
+       "       [0.33333333, 0.55555556],\n",
+       "       [1.        , 0.66666667]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.92],\n",
+       "       [0.86],\n",
+       "       [0.89]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y"
    ]
   },
   {
