--- a/15-Neural-Networks/02_Backprop_Assignment.ipynb
+++ b/15-Neural-Networks/02_Backprop_Assignment.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -34,6 +34,10 @@
    },
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
     "class Neural_Network(object):\n",
     "    def __init__(self, inputs=3, hiddenNodes=3, outputNodes=1):\n",
     "        self.inputs = inputs\n",
@@ -80,13 +84,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "\n",
     "df = pd.DataFrame({\n",
     "    'x1':[0, 0, 1, 0, 1, 1, 0],\n",
     "    'x2':[0, 1, 0, 1, 0, 1, 0],\n",
@@ -101,20 +102,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.34908627])"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "nn.feed_forward(X[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EPOCH 1 Loss: \n",
+      " 0.33210718765303043\n",
+      "EPOCH 2 Loss: \n",
+      " 0.2972578227046813\n",
+      "EPOCH 3 Loss: \n",
+      " 0.2743965742500592\n",
+      "EPOCH 4 Loss: \n",
+      " 0.2613579279961759\n",
+      "EPOCH 5 Loss: \n",
+      " 0.25415929213607635\n",
+      "EPOCH 50 Loss: \n",
+      " 0.17206640127689538\n",
+      "EPOCH 100 Loss: \n",
+      " 0.1285208959123444\n",
+      "EPOCH 150 Loss: \n",
+      " 0.11415431657670912\n",
+      "EPOCH 200 Loss: \n",
+      " 0.103597071428868\n",
+      "EPOCH 250 Loss: \n",
+      " 0.08778125824048862\n",
+      "EPOCH 300 Loss: \n",
+      " 0.05548944803905013\n",
+      "EPOCH 350 Loss: \n",
+      " 0.031165162786199876\n",
+      "EPOCH 400 Loss: \n",
+      " 0.020140001247423482\n",
+      "EPOCH 450 Loss: \n",
+      " 0.014412658523868012\n",
+      "EPOCH 500 Loss: \n",
+      " 0.01100179121029593\n",
+      "EPOCH 550 Loss: \n",
+      " 0.00880999599284309\n",
+      "EPOCH 600 Loss: \n",
+      " 0.007321449683109214\n",
+      "EPOCH 650 Loss: \n",
+      " 0.006257303259174124\n",
+      "EPOCH 700 Loss: \n",
+      " 0.005461525164289533\n",
+      "EPOCH 750 Loss: \n",
+      " 0.004844371244385743\n",
+      "EPOCH 800 Loss: \n",
+      " 0.0043517653165920265\n",
+      "EPOCH 850 Loss: \n",
+      " 0.003949412101563925\n",
+      "EPOCH 900 Loss: \n",
+      " 0.003614544715006361\n",
+      "EPOCH 950 Loss: \n",
+      " 0.003331460922222088\n",
+      "EPOCH 1000 Loss: \n",
+      " 0.003088981723433024\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(1000):\n",
     "    if i+1 in [1,2,3,4,5] or (i+1) % 50 == 0:\n",
@@ -139,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -166,18 +235,6 @@
     "    return data\n",
     "\n",
     "\n",
-    "def images_to_df(images):\n",
-    "    l = []\n",
-    "    for image in images:\n",
-    "        d = {}\n",
-    "        for i_r, row in enumerate(image):\n",
-    "            for i_c, val in enumerate(row):\n",
-    "                d[f'{i_r}_{i_c}'] = val[0]\n",
-    "        l.append(d)\n",
-    "\n",
-    "    return pd.DataFrame(l)\n",
-    "\n",
-    "\n",
     "def load_labels(n_labels):\n",
     "    f = gzip.open('datasets/train-labels-idx1-ubyte.gz','r')\n",
     "    f.read(8)\n",
@@ -192,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -200,22 +257,10 @@
    },
    "outputs": [],
    "source": [
-    "data = load_images(num_images=1000)\n",
-    "df = images_to_df(images=data)\n",
-    "labels = load_labels(n_labels=1000)\n",
-    "df['label'] = labels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X = df.drop(columns='label').values\n",
-    "y = df[['label']].values\n",
-    "\n",
-    "nn = Neural_Network(inputs=784, hiddenNodes=4, outputNodes=1)"
+    "X = load_images(num_images=1000)\n",
+    "X = X.reshape(X.shape[0], 28*28)\n",
+    "y = np.array(load_labels(n_labels=1000)).reshape(1000, 1)\n",
+    "# TODO target encoding"
    ]
   },
   {
@@ -226,6 +271,8 @@
    },
    "outputs": [],
    "source": [
+    "nn = Neural_Network(inputs=X.shape[1], hiddenNodes=4, outputNodes=1)\n",
+    "\n",
     "for i in range(1000):\n",
     "    if i+1 in [1,2,3,4,5] or (i+1) % 50 == 0:\n",
     "        print('EPOCH', i+1, \"Loss: \\n\", \n",
