finish sprint challenge

--- a/16-Deep-Learning/01_RNN_and_LSTM.ipynb
+++ b/16-Deep-Learning/01_RNN_and_LSTM.ipynb
@@ -260,11 +260,11 @@
     "# Not everything is best as a comprehension\n",
     "stock_data = np.empty([len(days), 4])\n",
     "for day in days:\n",
-    "  asset = random()\n",
-    "  liability = random()\n",
-    "  quote = random() + ((day * random()) + (20 * asset) - (15 * liability))\n",
-    "  quote = max(quote, 0.01)  # Want positive quotes\n",
-    "  stock_data[day] = np.array([quote, day, asset, liability])"
+    "    asset = random()\n",
+    "    liability = random()\n",
+    "    quote = random() + ((day * random()) + (20 * asset) - (15 * liability))\n",
+    "    quote = max(quote, 0.01)  # Want positive quotes\n",
+    "    stock_data[day] = np.array([quote, day, asset, liability])"
    ]
   },
   {
@@ -1696,6 +1696,7 @@
      "height": 836
     },
     "colab_type": "code",
+    "collapsed": true,
     "id": "ahlHBeoZCaLX",
     "outputId": "7b1c5f93-3fa5-42db-acb6-3c894b0accef"
    },
@@ -1824,13 +1825,13 @@
     "article_text = ''\n",
     "\n",
     "for article in ap.articles[:1]:\n",
-    "  try:\n",
-    "    article.download()\n",
-    "    article.parse()\n",
-    "    article_text += '\\n\\n' + article.text\n",
-    "  except:\n",
-    "    print('Failed: ' + article.url)\n",
-    "  \n",
+    "    try:\n",
+    "        article.download()\n",
+    "        article.parse()\n",
+    "        article_text += '\\n\\n' + article.text\n",
+    "    except:\n",
+    "        print('Failed: ' + article.url)\n",
+    "\n",
     "article_text = article_text.split('\\n\\n')[1]\n",
     "print(article_text)"
    ]
@@ -1926,7 +1927,7 @@
     "\n",
     "iteration = 1000\n",
     "sequence_length = 40\n",
-    "batch_size = round((txt_data_size /sequence_length)+0.5) # = math.ceil\n",
+    "batch_size = round((txt_data_size / sequence_length)+0.5) # = math.ceil\n",
     "hidden_size = 500  # size of hidden layer of neurons.  \n",
     "learning_rate = 1e-1\n",
     "\n",
