--- a/16-Deep-Learning/01_RNN_and_LSTM_Assignment.ipynb
+++ b/16-Deep-Learning/01_RNN_and_LSTM_Assignment.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# RNN and LSTM Assignment\n",
     "\n",
-    "![Monkey at a typewriter](https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/Chimpanzee_seated_at_typewriter.jpg/603px-Chimpanzee_seated_at_typewriter.jpg)\n",
+    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/Chimpanzee_seated_at_typewriter.jpg/603px-Chimpanzee_seated_at_typewriter.jpg\" width=400px>\n",
     "\n",
     "It is said that [infinite monkeys typing for an infinite amount of time](https://en.wikipedia.org/wiki/Infinite_monkey_theorem) will eventually type, among other things, the complete works of Wiliam Shakespeare. Let's see if we can get there a bit faster, with the power of Recurrent Neural Networks and LSTM.\n",
     "\n",
