--- a/16-Deep-Learning/05_Sprint_Challenge.ipynb
+++ b/16-Deep-Learning/05_Sprint_Challenge.ipynb
@@ -1094,36 +1094,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mse: -40550329466.80189\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('mse:', pipeline_optimizer.score(X_test, y_test))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 125,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "mse: -40550329466.80189\n",
       "rmse: 201371.1237163906\n"
      ]
     }
    ],
    "source": [
-    "print('rmse:', (pipeline_optimizer.score(X_test, y_test) * -1) ** (1/2))"
+    "print('mse:', pipeline_optimizer.score(X_test, y_test))\n",
+    "print('rmse:', np.sqrt(pipeline_optimizer.score(X_test, y_test) * -1))"
    ]
   },
   {
